# IA-TetriZzz

./: Evento.py  Memoria.py  TetrizDQN_model.pth  acoes_esperadas.npy  controlador.py  engine.py  main.py  main2.py  main3.py  mainEpDQL.py  mainEventMemory.py  mainGPT.py  operacoes.py  pecas.py  pyproject.toml  tabuleiro.py  tetriZzz2.0.py  tetriZzz_Otimizado.py  valores.py
AI_Hub/: AI_Hub.py  DQN.py  FilaDeMovimentos.py  Memory.py  TatrizEnv.py  valores.py
Jogo/: Engine.py  Pecas.py  Tabuleiro.py  TetriZzz_Otimizado.py  valores.py
Jogo2/: Engine.py  Pecas.py  Tabuleiro.py  TetriZzz.py  valores.py
Util/: Operacoes.py  open_cv_tela.py
backup/: engine.py  main.py  operacoes.py  pecas.py  perceptron.py  tabuleiro.py  tetriZzz_Otimizado.py  valores.py
