[project]
name = "ia-tetrizzz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gym>=0.26.2",
    "numpy>=1.24.4",
    "opencv-python>=4.11.0.86",
    "pygame>=2.6.1",
    "scipy>=1.10.1",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
]
